--- a/Selenium/test-output/index.html
+++ b/Selenium/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\dell\AppData\Local\Temp\testng-eclipse-291212280\testng-customsuite.xml</span>
+                    <span>C:\Users\dell\AppData\Local\Temp\testng-eclipse-1839331755\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Selenium.Selenium.InfosysPdf1" class="method navigator-link" hash-for-method="waits">waits</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Selenium.Selenium.basicquestions" class="method navigator-link" hash-for-method="actionclass">actionclass</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Selenium.Selenium.InfosysPdf1</span>
+              <span class="class-name">Selenium.Selenium.basicquestions</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="waits">
-                  </a> <!-- waits -->
-                  <span class="method-name">waits</span>
+                  <a name="actionclass">
+                  </a> <!-- actionclass -->
+                  <span class="method-name">actionclass</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\dell\AppData\Local\Temp\testng-eclipse-291212280\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\dell\AppData\Local\Temp\testng-eclipse-1839331755\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Selenium.Selenium.InfosysPdf1&quot;/&gt;
+      &lt;class name=&quot;Selenium.Selenium.basicquestions&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;actionclass&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- Selenium.Selenium.basicquestions --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -187,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'waits')
-data.setCell(0, 2, 'Selenium.Selenium.InfosysPdf1')
-data.setCell(0, 3, 6390);
+data.setCell(0, 1, 'actionclass')
+data.setCell(0, 2, 'Selenium.Selenium.basicquestions')
+data.setCell(0, 3, 14605);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 14 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -209,17 +213,13 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">3 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">Selenium.Selenium.InfosysPdf1</span>
+              <span class="ignored-class-name">Selenium.Selenium.basicquestions</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">findelement</span>
-                <br/>
-                <span class="ignored-method-name">findelements</span>
-                <br/>
-                <span class="ignored-method-name">handlemultiplewindows</span>
+                <span class="ignored-method-name">dropdown</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -231,19 +231,15 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Selenium.Selenium.InfosysPdf1</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">Selenium.Selenium.basicquestions</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">configuration</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">waits</span>
-                <span class="method-start">4305 ms</span>
+                <span class="method-name">actionclass</span>
+                <span class="method-start">3479 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-test after">
-                <span class="method-name">down</span>
-                <span class="method-start">10704 ms</span>
-              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
